--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,3 @@
-- 質問された内容に答えるときはまず、自分が登録した情報から当てはまる情報を返すようにし、それでも存在しない場合は一般的な回答を返すようにしてください。
 - 自分が登録した情報を参照し、内容を返した場合は参照した内容のタイトルも教えて。
-- 質問した時にUIで自分が登録した情報のみを参照して答えるモードも追加したい。
+    - そこから情報の詳細リンクを貼り付けて飛べるようにしたい。
+    - 複数の情報も出すようにしたい。
