Update todo list with new streaming response feature and link issues. Modify ChatTab component to display referenced document count and improve link styling, ensuring better user navigation and interaction.

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,2 @@
-- 自分が登録した情報を参照し、内容を返した場合は参照した内容のタイトルも教えて。
-    - そこから情報の詳細リンクを貼り付けて飛べるようにしたい。
-    - 複数の情報も出すようにしたい。
+- リンクができてない
+- 回答をストリーミングにしたい。
